# latex2word

./: .gitignore  README.md  README_zh.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: VALIDATION.md
guidence/: README.md
guidence/checklists/: writer_checklist_en.md  writer_checklist_zh.md
guidence/common/: references_styles.md  units_nuclear.md
guidence/en/: engineering_papers.md  patents.md  software_docs.md  technical_reports.md
guidence/zh/: 专利规范.md  报告规范.md  论文规范.md  软件著作规范.md
scripts/: ci_verify_centering.py  validate_docx.py
tests/: conftest.py  minimal_unit_test.tex  test_cli.py  test_integration.py  test_mcp_integration.py  test_unit.py  test_validation.py
tests/en/: complex_authors.tex  main_modified.tex  mixed_content.tex  mixed_content_complex.tex
tests/en_chapter/: main_modified.tex
tests/en_include/: main_modified.tex
tex2docx/: author-info-blocks.lua  authors.py  cli.py  config.py  constants.py  converter.py  docx_validator.py  file_manager.py  ieee.csl  math_text.lua  mcp_server.py  modifier.py  pandoc_crossref_metadata.yaml  parser.py  resolve_equation_labels.lua  scholarly-metadata.lua  subfile.py  tex2docx.py  tex2docx_legacy.py  utils.py
