[build-system]
requires = [
    "setuptools", 
    "setuptools_scm[toml]",
    "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tex2docx"
authors = [
    {name = "Mingzefei", email = "huagb@qq.com"}
]
readme = "README.md"
dynamic = ["version"]
description = "A project to convert LaTeX to DOCX"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
  "regex",
  "tqdm",
  "typer",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest"
]

[project.scripts]
"tex2docx" = "tex2docx:cli.app"
"tex2docx-mcp" = "tex2docx.mcp_server:main"

[tool.setuptools]
packages = ["tex2docx"]

[tool.setuptools.package-data]
tex2docx = [
    "*.csl",
    "*.docx",
    "*.lua",
]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
fallback_version = "1.3.6"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "integration: marks tests as integration tests (need manual verification)",
    "unit: marks tests as unit tests (automated verification only)",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "asyncio: marks tests that require an asyncio event loop",
]

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
]
